--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,4 +9,6 @@ jobs:
       - uses: actions/setup-go@v5
         with: { go-version: 1.23 }
       - run: go build -v ./...
-      - run: go test -cover ./...
+      - run: go test -coverprofile=coverage.out ./...
+      - uses: coverallsapp/github-action@v2
+        with: { file: coverage.out, format: golang }
